# dogfighting

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  at-project.sln  at-project.vcxproj
app/: CMakeLists.txt  app.vcxproj  main.cpp
app/src/: AppMessages.cpp  AppMessages.h  CollisionCallback.h  FollowCamera.h  FreeCamera.h  GoofySystem.h  PlaneController.h  RocketSystem.h  main.cpp
at/: CMakeLists.txt  at.vcxproj  at.vcxproj.filters
at-project/: at-project.vcxproj
at/lib/: glfw3.lib
at/res/models/lowpoly_terrain/: Low-Poly Terrain.mtl  cube.mtl  desktop.ini  new_terrain.obj.mtl  rectangle.mtl
at/res/models/meshy/: terrain.obj.mtl
at/res/models/rocket/: rocket.fbx
at/res/shaders/: lit_f.glsl  lit_v.glsl  simple_lit_f.glsl  vertex.glsl
at/src/: at.h  atpch.h
at/src/at/: Application.cpp  Application.h  Logger.cpp  Logger.h  Window.cpp  Window.h  atpch.h
at/src/at/core/: Application.cpp  Application.h  Core.h  EngineSubsystem.h  GameLayer.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Logger.h  MouseCodes.h  Window.cpp  Window.h
at/src/at/core/event/: Event.h  KeyEvent.h  MouseEvent.h
at/src/at/ecs/: Component.h  ComponentTypes.h  Entity.cpp  Entity.h  IComponent.h  ISystem.h  Prefab.cpp  Prefab.h  Scene.cpp  Scene.h  System.h  SystemScheduler.h
at/src/at/ecs/CoreComponents/: ActiveTag.h  BehaviourComponent.h  CameraComponent.h  CoreComponents.h  CreatedTag.h  DirectionalLightComponent.h  MeshRenderer.h  PointLightComponent.h  ToBeDestroyedTag.h  Transform.h
at/src/at/ecs/CoreSystems/: CameraSystem.h  EntityManagerSystem.h  MeshRendererSystem.h  PhysicsSystem.h  PointLightSystem.h
at/src/at/math/: Math.cpp  Math.h  Vector.h
at/src/at/networking/: DirtyComponent.h  Messages.h  NetworkSyncSystem.h  NetworkTag.h  Networking.cpp  Networking.h  NetworkingSystem.h
at/src/at/physics/: CollisionShape.cpp  CollisionShape.h  CollisionShapeLibrary.h  PhysicsSystem.h  PhysicsWorld.cpp  PhysicsWorld.h  Rigidbody.cpp  Rigidbody.h
at/src/at/renderer/: Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  Light.h  Material.cpp  Material.h  MaterialLibrary.h  Mesh.cpp  Mesh.h  MeshRendererSystem.h  Model.cpp  Model.h  ModelLibrary.h  ModelNode.h  RenderWorld.h  Renderer.cpp  Renderer.h  Shader.h  ShaderLibrary.h  SkyboxSystem.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h
at/src/at/utils/: Constants.h  Helpers.h  Math.h
bin-int/x64-Debug/: vc143.idb
bin-int/x64-Debug/app/: app.exe.recipe  vc143.idb
bin-int/x64-Debug/at/: at.dll.recipe  vc143.idb
